--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Business Name</title>
-  <meta name="description" content="Professional services with a personal touch." />
+  <title>Venyou Solutions</title>
+  <meta name="description" content="Professional facility and AVL management services with a personal touch." />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
-    <h1>Your Business Name</h1>
+    <h1>Venyou Solutions</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
@@ -19,31 +19,84 @@
   </header>
 
   <main>
+    <!-- Hero Section -->
     <section id="hero">
-      <h2>Setting the Stage for Great Experiences</h2>
-      <p>Custom solutions for property, design, and event projects.</p>
-      <a href="#contact" class="button">Get in Touch</a>
+      <div class="hero-image">
+        <img src="images/hero-placeholder.jpg" alt="Hero Image" />
+      </div>
+      <div class="hero-text">
+        <h2>Setting the Stage for Your Success</h2>
+        <p>Custom services and technology built for you.</p>
+        <a href="#contact" class="button">Get in Touch</a>
+      </div>
     </section>
 
+    <!-- About Us Section -->
     <section id="about">
       <h2>About Us</h2>
-      <p>We bring years of experience in design, management, and production to every project we take on. Whether you need help managing a property, designing a renovation, or coordinating an event, we focus on solutions that fit your goals.</p>
+      <div class="about-content">
+        <div class="about-text">
+          <p>We empower organizations and businesses to thrive in the facilities they occupy through dependable, forward-thinking management and technology solutions. Our goal is to simplify operations, ensure reliability, and enhance how your space can function and perform.</p>
+        </div>
+        <div class="about-image">
+          <img src="images/about-placeholder.jpg" alt="About Us Image" />
+        </div>
+      </div>
     </section>
 
+    <!-- Core Service Areas Section -->
     <section id="services">
-      <h2>Our Services</h2>
-      <ul>
-        <li>Project Management</li>
-        <li>Event & Venue Coordination</li>
-        <li>Audio, Lighting, and Visual Design</li>
-        <li>Property Oversight and Maintenance</li>
-      </ul>
+      <h2>Core Service Areas</h2>
+
+      <div class="service">
+        <div class="service-image">
+          <img src="images/facility-placeholder.jpg" alt="Facility Management Image" />
+        </div>
+        <div class="service-text">
+          <h3>Facility Management Services</h3>
+          <ul>
+            <li>Smooth operations with proactive maintenance</li>
+            <li>Secure, connected facilities and vendors</li>
+            <li>Streamlined events and project oversight</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="service">
+        <div class="service-image">
+          <img src="images/avl-placeholder.jpg" alt="AVL Solutions Image" />
+        </div>
+        <div class="service-text">
+          <h3>AVL (Audio, Visual & Lighting) Solutions</h3>
+          <ul>
+            <li>Immersive sound, video, projection</li>
+            <li>Stage and architectural lighting integration</li>
+            <li>Ongoing support, maintenance, training</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
+    <!-- What Sets Us Apart Section -->
+    <section id="difference">
+      <h2>What Sets Us Apart</h2>
+      <div class="difference-content">
+        <ul>
+          <li>Local and dependable service coverage</li>
+          <li>Experienced in facility and AVL systems</li>
+          <li>Unified, tailored support for your facility and systems</li>
+        </ul>
+        <div class="difference-image">
+          <img src="images/difference-placeholder.jpg" alt="Our Difference Image" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
     <section id="contact">
       <h2>Contact</h2>
       <p>We’d love to connect! Use the form below or email us directly at:</p>
-      <p><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></p>
+      <p><a href="mailto:info@venyousolutions.com">info@venyousolutions.com</a></p>
 
       <!-- Formspree example (no backend needed) -->
       <form action="https://formspree.io/f/yourformid" method="POST">
@@ -56,7 +109,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Your Business Name. All rights reserved.</p>
+    <p>© 2025 Venyou Solutions. All rights reserved.</p>
   </footer>
 </body>
 </html>
