--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <h1>Venyou Solutions</h1>
+    <div class="logo">Venyou Solutions</div>
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#difference">What Sets Us Apart</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -32,10 +32,7 @@
     <!-- About Us Section -->
     <section id="about">
       <h2>About Us</h2>
-      <div class="about-content">
-        <p>We empower organizations and businesses to thrive in the facilities they occupy through dependable, forward-thinking management and technology solutions. Our goal is to simplify operations, ensure reliability, and enhance how your space can function and perform.</p>
-        <img src="images/about-placeholder.jpg" alt="About Venyou Solutions" />
-      </div>
+      <p>We empower organizations and businesses to thrive in the facilities they occupy through dependable, forward-thinking management and technology solutions. Our goal is to simplify operations, ensure reliability, and enhance how your space can function and perform.</p>
     </section>
 
     <!-- Core Service Areas Section -->
@@ -43,33 +40,27 @@
       <h2>Core Service Areas</h2>
 
       <div class="service">
-        <img src="images/facility-placeholder.jpg" alt="Facility Management" />
-        <div class="service-text">
-          <h3>Facility Management Services</h3>
-          <ul>
-            <li>Smooth operations with proactive maintenance</li>
-            <li>Secure, connected facilities and vendors</li>
-            <li>Streamlined events and project oversight</li>
-          </ul>
-        </div>
+        <h3>Facility Management Services</h3>
+        <ul>
+          <li>Smooth operations with proactive maintenance</li>
+          <li>Secure, connected facilities and vendors</li>
+          <li>Streamlined events and project oversight</li>
+        </ul>
       </div>
 
       <div class="service">
-        <img src="images/avl-placeholder.jpg" alt="AVL Solutions" />
-        <div class="service-text">
-          <h3>AVL (Audio, Visual & Lighting) Solutions</h3>
-          <ul>
-            <li>Immersive sound, video, and projection</li>
-            <li>Stage and architectural lighting integration</li>
-            <li>Ongoing support, maintenance, and training</li>
-          </ul>
-        </div>
+        <h3>AVL (Audio, Visual & Lighting) Solutions</h3>
+        <ul>
+          <li>Immersive sound, video, projection</li>
+          <li>Stage and architectural lighting integration</li>
+          <li>Ongoing support, maintenance, training</li>
+        </ul>
       </div>
     </section>
 
     <!-- What Sets Us Apart Section -->
-    <section id="difference" class="banner-section">
-      <div class="banner-overlay">
+    <section id="difference" class="image-banner">
+      <div class="overlay">
         <h2>What Sets Us Apart</h2>
         <ul>
           <li>Local and dependable service coverage</li>
@@ -85,7 +76,6 @@
       <p>We’d love to connect! Use the form below or email us directly at:</p>
       <p><a href="mailto:info@venyousolutions.com">info@venyousolutions.com</a></p>
 
-      <!-- Formspree form (no backend required) -->
       <form action="https://formspree.io/f/yourformid" method="POST">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
