--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Hero Section -->
     <section id="hero" class="hero-banner">
       <div class="hero-overlay">
-        <h2>Setting the Stage for Your Success</h2>
-        <p>Custom services and technology built for you.</p>
+        <h2>Facility & AVL Management</h2>
+        <p>Customize services built for your space</p>
         <a href="#contact" class="button">Get in Touch</a>
       </div>
     </section>
