--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="hero" class="hero-banner">
       <div class="hero-overlay">
         <h2>Facility & AVL Management</h2>
-        <p>Customize services built for your space</p>
+        <p>Customized services built for your space</p>
         <a href="#contact" class="button">Get in Touch</a>
       </div>
     </section>
@@ -34,15 +34,15 @@
     <!-- About Us Section -->
     <section id="about">
       <h2>About Us</h2>
-      <p>We empower organizations and businesses to thrive in the facilities they occupy through dependable, forward-thinking management and technology solutions. Our goal is to simplify operations, ensure reliability, and enhance how your space can function and perform.</p>
+      <p>We empower businesses and organizations to thrive in the facilities they occupy through dependable, forward-thinking management and technology solutions. Our goal is to simplify operations, ensure reliability, and enhance how your space can function and perform.</p>
     </section>
 
     <!-- Core Service Areas Section -->
     <section id="services">
-      <h2>Core Service Areas</h2>
+      <h2>Core Services</h2>
 
       <div class="service">
-        <h3>Facility Management Services</h3>
+        <h3>Facility Management</h3>
         <ul>
           <li>Smooth operations with proactive maintenance</li>
           <li>Secure, connected facilities and vendors</li>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="service">
-        <h3>AVL (Audio, Visual & Lighting) Solutions</h3>
+        <h3>Audio, Visual & Lighting</h3>
         <ul>
           <li>Immersive sound, video, projection</li>
           <li>Stage and architectural lighting integration</li>
