--- a/index.html
+++ b/index.html
@@ -41,22 +41,34 @@
     <section id="services">
       <h2>Core Services</h2>
 
-      <div class="service">
-        <h3>Facility Management</h3>
-        <ul>
-          <li>Smooth operations with proactive maintenance</li>
-          <li>Secure, connected facilities and vendors</li>
-          <li>Streamlined events and project oversight</li>
-        </ul>
-      </div>
+      <div class="services-grid">
 
-      <div class="service">
-        <h3>Audio, Visual & Lighting</h3>
-        <ul>
-          <li>Immersive sound, video, projection</li>
-          <li>Stage and architectural lighting integration</li>
-          <li>Ongoing support, maintenance, training</li>
-        </ul>
+        <!-- Facility Management Column -->
+        <div class="service">
+          <div class="service-img-box">
+            <img src="https://via.placeholder.com/400x200?text=Facility+Image" alt="Facility Management">
+          </div>
+          <h3>Facility Management Services</h3>
+          <ul>
+            <li>Smooth operations with proactive maintenance</li>
+            <li>Secure, connected facilities and vendors</li>
+            <li>Streamlined events and project oversight</li>
+          </ul>
+        </div>
+
+        <!-- AVL Column -->
+        <div class="service">
+          <div class="service-img-box">
+            <img src="https://via.placeholder.com/400x200?text=AVL+Image" alt="AVL Solutions">
+          </div>
+          <h3>AVL (Audio, Visual & Lighting) Solutions</h3>
+          <ul>
+            <li>Immersive sound, video, projection</li>
+            <li>Stage and architectural lighting integration</li>
+            <li>Ongoing support, maintenance, training</li>
+          </ul>
+        </div>
+
       </div>
     </section>
 
