--- a/index.html
+++ b/index.html
@@ -38,8 +38,31 @@
 
 <!-- =================== HERO =================== -->
 <section class="hero fade-in">
-  <h1 class="hero-title">Facility Management &<br> Production Services</h1>
-  <p class="hero-sub">Smart solutions for landlords, venues, and organizations.</p>
+
+  <!-- Rotating Hero Text Container -->
+  <div id="hero-text-container">
+    <!-- FIRST SET -->
+    <div class="hero-set active">
+      <h1 class="hero-title">Facility Management &<br> Production Services</h1>
+      <p class="hero-sub">Smart solutions for landlords, venues, and organizations.</p>
+    </div>
+
+    <!-- SECOND SET -->
+    <div class="hero-set">
+      <h1 class="hero-title">Your Space, Expertly Managed</h1>
+      <p class="hero-sub">We help you operate smoother, safer, and more efficiently.</p>
+    </div>
+
+    <!-- THIRD SET -->
+    <div class="hero-set">
+      <h1 class="hero-title">Designed for Long-Term Success</h1>
+      <p class="hero-sub">Reliable systems that free up your time and grow your revenue.</p>
+    </div>
+  </div>
+
+  <!-- CTA BUTTON -->
+  <a href="#contact" class="hero-cta">Get In Touch</a>
+
 </section>
 
 <!-- =================== ABOUT =================== -->
